# jvmti-rs

./: .gitignore  Cargo.toml  README.md
jni-jvmti-sys/src/: lib.rs  sys.rs
jvmti/: Cargo.toml  run_tests_with_valgrind.sh
jvmti/src/: env.rs  event.rs  heap.rs  lib.rs  memory.rs  util.rs
jvmti/tests/: capabilities.rs  common.rs  event_callback.rs  iterate_through_heap.rs  loaded_classes.rs
src/: lib.rs  sys.rs
