[package]
name = "jvmti"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni-jvmti-sys = { path = "../jni-jvmti-sys" }
jni = "0.19"

log = "0.4"
thiserror = "1.0"
displaydoc = "0.2"
bitflags = "1.2"
widestring = "0.4"
mutf8 = "0.5"

[dev-dependencies]
jni = { version = "0.19", features = ["invocation"] }
env_logger = "0.8"
